added cart app with models and views with context processors. still styling to do but tested and works as expected. updated code to ensure remove button works and checked in admin

--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -47,7 +47,11 @@
       {% if product.short_description %}
         <p class="mb-4">{{ product.short_description }}</p>
       {% endif %}
-      <a href="#" class="btn btn-lg btn-primary">Add to Cart</a>
+    
+      <form action="{% url 'cart:add_to_cart' product.id %}" method="post">
+        {% csrf_token %}
+        <button type="submit" class="btn btn-lg btn-primary">Add to Cart</button>
+      </form>
     </div>
   </div>
 </main>
