--- a/templates/base.html
+++ b/templates/base.html
@@ -89,7 +89,7 @@
               </li>
               {% if user.is_authenticated %}
               <li class="nav-item">
-                <a href="{% url 'accounts:profile' %}">Welcome, {{ user.username }}</a>
+                <a class="nav-link" href="{% url 'accounts:profile' %}">Welcome, {{ user.username }}</a>
               </li>
               <li class="nav-item">
                 <a class="nav-link" href="{% url 'account_logout' %}">Logout</a>
@@ -103,11 +103,13 @@
               </li>
               {% endif %}
               <li class="nav-item">
-                <a class="nav-link" href="#">
+                <a class="nav-link position-relative" href="{% url 'cart:view_cart' %}">
                   Cart
-                  <span class="badge bg-warning text-dark"
-                    >{{ cart_item_count }}</span
-                  >
+                  {% if cart_item_count > 0 %}
+                    <span class="position-absolute top-0 start-100 translate-middle badge rounded-pill bg-danger">
+                      {{ cart_item_count }}
+                    </span>
+                  {% endif %}
                 </a>
               </li>
             </ul>
