--- a/products/templates/products/product_details.html
+++ b/products/templates/products/product_details.html
@@ -50,8 +50,11 @@
     
       <form action="{% url 'cart:add_to_cart' product.id %}" method="post">
         {% csrf_token %}
-        <button type="submit" class="btn btn-lg btn-primary">Add to Cart</button>
+        <button type="submit" class="btn btn-lg btn-primary">
+          Add to Cart
+        </button>
       </form>
+      
     </div>
   </div>
 </main>
