--- a/templates/base.html
+++ b/templates/base.html
@@ -36,7 +36,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"></script>
     <script src="https://kit.fontawesome.com/17fadc6c88.js" crossorigin="anonymous"></script>
     <!-- Stripe JS -->
-    <script src="https://js.stripe.com/basil/stripe.js"></script>
+    <script src="https://js.stripe.com/v3/"></script>
     {% endblock %}
 
   </head>
