--- a/staticfiles/orders/css/orders.css
+++ b/staticfiles/orders/css/orders.css
@@ -1,26 +1,58 @@
+body {
+  background-color: #f9f7f3;
+}
+
 .order-detail-card {
-    padding: 20px;
-    background-color: #f9f7f3;
-    box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
-  }
-  
-  .order-detail-card h2 {
-    color: #5a4231;
-    font-weight: bold;
-  }
-  
-  .order-detail-card .list-group-item {
-    background-color: #ffffff;
-    border: 1px solid #ddd;
-    margin-bottom: 10px;
-  }
-  
-  .order-detail-card .btn-secondary {
-    background-color: #c99b3b;
-    color: white;
-  }
-  
-  .order-detail-card .btn-secondary:hover {
-    background-color: #b58932;
-  }
-  
+  padding: 30px;
+  background-color: #f9f7f3;
+  box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
+  margin-top: 50px;
+  max-width: 800px;
+  margin-left: auto;
+  margin-right: auto;
+}
+
+.order-detail-card h2 {
+  color: #5a4231;
+  font-weight: bold;
+}
+
+.order-detail-card .list-group-item {
+  background-color: #ffffff;
+  border: 1px solid #ddd;
+  margin-bottom: 10px;
+}
+
+.order-detail-card .btn-secondary {
+  background-color: #c99b3b;
+  color: white;
+}
+
+.order-detail-card .btn-secondary:hover {
+  background-color: #b58932;
+}
+
+.order-detail-card .btn-secondary {
+  background-color: #c99b3b;
+  color: white;
+  border: none;
+  padding: 10px 20px;
+  border-radius: 5px;
+  text-transform: uppercase;
+  font-weight: bold;
+  text-decoration: none;
+  display: inline-block;
+  margin-top: 20px;
+}
+
+.order-detail-card .btn-secondary:hover {
+  background-color: #b58932;
+  color: white;
+  text-decoration: none;
+}
+
+.image-order {
+  max-width: 200px;
+  height: auto;
+  margin-bottom: 10px;
+}
